Fix banner font size on mobile (min not supported on samsung browser)

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .terminal-container {
-  width: 100%;
   height: 100vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   cursor: text;
-  background: #000;
-  background-size: cover;
+  background-color: #171717;
 }
 
 .terminal-content {
@@ -23,8 +22,19 @@
   text-shadow: 0 0 5px teal;
   line-height: normal;
   font-weight: bold;
-  font-size: min(2.7vw, 18px);
+  font-size: calc(1vw + 7px);
   margin-bottom: 20px;
+}
+@media only screen and (max-width: 400px) {
+  .terminal-banner {
+    font-size: 8px;
+  }
+}
+
+@media only screen and (max-width: 300px) {
+  .terminal-banner {
+    font-size: 6px;
+  }
 }
 
 .terminal-welcome-message {
